<?xml version="1.0"?>
<package>
  <name>walk_and_kick</name>
  <version>0.0.0</version>
  <description>The walk and kick package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="pallgeuer@ais.uni-bonn.de">Philipp Allgeuer</maintainer>
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/robotcontrol</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>config_server</build_depend>
  <build_depend>plot_msgs</build_depend>
  <build_depend>gait_msgs</build_depend>
  <build_depend>gait</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>timer</build_depend>
  <build_depend>robotcontrol</build_depend>
  <build_depend>field_model</build_depend>
  <build_depend>head_control</build_depend>
  <build_depend>nimbro_op_interface</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>config_server</run_depend>
  <run_depend>plot_msgs</run_depend>
  <run_depend>gait_msgs</run_depend>
  <run_depend>gait</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>timer</run_depend>
  <run_depend>robotcontrol</run_depend>
  <run_depend>field_model</run_depend>
  <run_depend>head_control</run_depend>
  <run_depend>nimbro_op_interface</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
