<?xml version="1.0"?>
<package>
  <name>walk_and_kick</name>
  <version>1.0.0</version>
  <description>The walk and kick package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="pallgeuer@ais.uni-bonn.de">Philipp Allgeuer</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>robotcontrol</build_depend>
  <build_depend>config_server</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>plot_msgs</build_depend>
  <build_depend>vis_utils</build_depend>
  <build_depend>gait_msgs</build_depend>
  <build_depend>gait</build_depend>
  <build_depend>timer</build_depend>
  <build_depend>field_model</build_depend>
  <build_depend>nimbro_op_interface</build_depend>
  <build_depend>rc_utils</build_depend>
  <build_depend>head_control</build_depend>
  <build_depend>vision_module</build_depend>
  <build_depend>rcup_game_controller</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>robotcontrol</run_depend>
  <run_depend>config_server</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>plot_msgs</run_depend>
  <run_depend>vis_utils</run_depend>
  <run_depend>gait_msgs</run_depend>
  <run_depend>gait</run_depend>
  <run_depend>timer</run_depend>
  <run_depend>field_model</run_depend>
  <run_depend>nimbro_op_interface</run_depend>
  <run_depend>rc_utils</run_depend>
  <run_depend>head_control</run_depend>
  <run_depend>vision_module</run_depend>
  <run_depend>rcup_game_controller</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
